WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86005
[GTK] Missing field initializers for WKPageLoaderClient
https://bugs.webkit.org/show_bug.cgi?id=86005
Summary
[GTK] Missing field initializers for WKPageLoaderClient
Simon Pena
Reported
2012-05-09 10:54:14 PDT
Building WK2 currently outputs the following warnings: ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp: In function ‘void attachLoaderClientToView(WebKitWebView*)’: ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:149:5: warning: missing initializer for member ‘WKPageLoaderClient::willGoToBackForwardListItem’ [-Wmissing-field-initializers] ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:149:5: warning: missing initializer for member ‘WKPageLoaderClient::interactionOccurredWhileProcessUnresponsive’ [-Wmissing-field-initializers] The attached patch initializes these members.
Attachments
Patch
(1.65 KB, patch)
2012-05-09 10:59 PDT
,
Simon Pena
no flags
Details
Formatted Diff
Diff
Patch
(1.69 KB, patch)
2012-05-09 11:18 PDT
,
Simon Pena
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Pena
Comment 1
2012-05-09 10:59:14 PDT
Created
attachment 140977
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-09 11:01:05 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Review Bot
Comment 3
2012-05-09 11:11:55 PDT
Comment on
attachment 140977
[details]
Patch Rejecting
attachment 140977
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit2/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12656723
Simon Pena
Comment 4
2012-05-09 11:15:31 PDT
I'll check if I messed up the changelog, one sec.
Simon Pena
Comment 5
2012-05-09 11:18:51 PDT
Created
attachment 140983
[details]
Patch
WebKit Review Bot
Comment 6
2012-05-10 09:32:44 PDT
Comment on
attachment 140983
[details]
Patch Clearing flags on attachment: 140983 Committed
r116651
: <
http://trac.webkit.org/changeset/116651
>
WebKit Review Bot
Comment 7
2012-05-10 09:32:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug