[GTK] Missing field initializers for WKPageLoaderClient https://bugs.webkit.org/show_bug.cgi?id=86005

Patch by Simon Pena <spena@igalia.com> on 2012-05-10
Reviewed by Martin Robinson.

Initialize willGoToBackForwardListItem and
interactionOccurredWhileProcessUnresponsive fields of
WKPageLoaderClient.

* UIProcess/API/gtk/WebKitLoaderClient.cpp:
(attachLoaderClientToView):

Canonical link: https://commits.webkit.org/103693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116651 268f45cc-cd09-0410-ab3c-d52691b4dbfc