Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp
@@ -145,7 +145,9 @@ void attachLoaderClientToView(WebKitWebView* webView)
         0, // shouldGoToBackForwardListItem
         0, // didFailToInitializePlugin
         0, // didDetectXSSForFrame
-        0 // didFirstVisuallyNonEmptyLayoutForFrame 
+        0, // didFirstVisuallyNonEmptyLayoutForFrame
+        0, // willGoToBackForwardListItem
+        0 // interactionOccurredWhileProcessUnresponsive
     };
     WKPageRef wkPage = toAPI(webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView)));
     WKPageSetPageLoaderClient(wkPage, &wkLoaderClient);
